# am-cakeml

./: .gitignore  BuildAMFunctions.cmake  ByteString.sml  CMakeLists.txt  CakeMLHelper.cmake  CakemlHelper.cmake  CoplandLang.sml  CoqDefaults.sml  DefaultConfig.cmake  Eval.sml  GetFiles.cmake  HandleOS.cmake  MAESTRO_workflow_steps.docx  Main.sml  Makefile  Measurements.sml  README.md  apdt.sml  basistypes.txt  cakewrap.py  caseInitCMake.sh  do_extract.sh  print_cakeml_types.sh  send_req.sh
.github/workflows/: build.yaml  build_and_test.yaml  main.yml  release.yaml  test.yaml
AMserver/: AMserver.sml  ClientTest.sml  Comm.sml  CommTypes.sml  CommUtil.sml  Makefile  README.md  clientTest.sml
JSON/: CoplandToJson.sml  Json.sml  JsonApdtSamples.json  JsonToApdt.sml  JsonToCopland.sml  Makefile  testJ2A.sml
am/: ClientTest.sml  CommTypes.sml  CoplandCommUtil.sml  Manifest.sml  ManifestUtils.sml  Measurements.sml  PosixCommUtil.sml  README.md  Server.sml  ServerAm.sml  SocketCommUtil.sml  seL4CommUtil.sml
apps/: README.md
apps/AttestationManager/: AM.sml  CMakeLists.txt
apps/CAmkES_client/: CMakeLists.txt  README.md
apps/CAmkES_server/: CMakeLists.txt  Server.sml  camkes_server.sml  example_server-ini.sml  example_server.ini  example_server.json  genLiteralIni.sh  genLiteralJsonString.sh
apps/EvidenceToJson/: CMakeLists.txt  EvidenceToJson.sml
apps/ManifestCompiler/: CMakeLists.txt  Client.sml  Compiler.sml  Compiler2.sml  ManifestBuilder.sml  README.md  Server.sml  Test_Am_Lib.sml  Test_Am_Lib2.sml  Test_FormMan.sml  example_Manifest.json
apps/ManifestGenerator/: CMakeLists.txt  ManifestGenerator.sml
apps/TermToJson/: CMakeLists.txt  TermToJson.sml
apps/attestation_manager/: CMakeLists.txt  attestation_manager.sml
apps/blockchain/: AddAppraiser.sml  AddUser.sml  Blockchain.sml  CA.sml  CAClient.sml  CMakeLists.txt  Clear.sml  Client.sml  HealthRecord.sml  Print.sml  README.md  RemoveAppraiser.sml  Server.sml  (+5 more)
buildscripts/: deps.make  topOrd.py
cake-apdt/: APDT.sml  ByteString.sml  Common.sml  CoplandLang.sml  CoqDefaults.sml  Eval.sml  Main.sml  Makefile  Measurements.sml  README.md  ToStringUtils.sml  cakeappender.py
copland/: AM.sml  APP.sml  BS.sml  CoplandUtil.sml  CvmUtil.sml  Instr.sml  Parser.sml  README.md  VM.sml
crypto/: CMakeLists.txt  CryptoFFI.sml  HaclConfig.cmake  Random.sml  crypto_ffi.c  idstring.h  key_gen.c  myPrivateKey.txt  thisPubMod
crypto/sig/: Makefile  mySig.txt  sig.c  sig.h  test.c
crypto/sig/rsa/: Makefile  genKeys.c  rsa.c  rsa.h  rsaInterface.c  rsaInterface.h  test.c  utils.c  utils.h
crypto/sig/sha512/: Makefile  hasher.c  hasher.h  toBinary.c  toBinary.h
crypto/sys/CAmkES/: crypto_ffi.c
crypto/sys/linux/: crypto_ffi.c
crypto/sys/macOS/: crypto_ffi.c
deprecated/: NamedAPDT.sml
extracted/: AM_Helpers.cml  AM_Json_Interfaces.cml  AM_Manager.cml  AM_Monad.cml  AM_St.cml  AbstractedTypes.cml  Anno_Term_Defs.cml  AppraisalSummary.cml  Appraisal_Defs.cml  Appraisal_Defs_New.cml  Appraisal_Evidence.cml  Appraisal_IO_Stubs.cml  Appraisal_IO_Stubs_AM.cml  Appraisal_IO_Stubs_New.cml  Ascii.cml  Attestation_Session.cml  Axioms_Io.cml  BS.cml  BinNat.cml  BinNums.cml  BinPos.cml  Bool.cml  CACL.cml  CACL_Demo.cml  CACL_Demo_Args.cml  Client_AM.cml  Client_AM_Local.cml  ConcreteEvidence.cml  Concrete_Extractables.cml  CopParser.cml  Copland_AC.cml  CvmJson.cml  CvmJson_Admits.cml  CvmJson_Interfaces.cml  Cvm_Impl.cml  Cvm_Monad.cml  Cvm_Monad_orig.cml  Cvm_Run.cml  Cvm_St.cml  Cvm_Utils.cml  (+72 more)
interp/: CoplandLang.sml  Eval.sml  Instr.sml  README.md  VM.sml
sockets/: ClientTest.sml  Makefile  README.md  ServerTest.sml  SocketFFI.sml  dummy_ffi.c  socket_ffi.c
stubs/: AbstractedTypes.sml  Appraisal_IO_Stubs.sml  Appraisal_IO_Stubs_New.sml  Axioms_Io.sml  BS.cml  BS.sml  CACL_Demo_Args.sml  Client_AM_Local_Annotated.sml  Compare_Stub.sml  CvmJson_Admits.sml  Cvm_Monad_Annotated.sml  Cvm_St_Utils.sml  EqClass_UnAnnotated.sml  ErrorStringConstants.sml  Example_Phrases_Admits.sml  Example_Phrases_Demo_Admits.cml  Example_Phrases_Demo_Admits.sml  Example_Phrases_Pre_Admits.sml  IO_Stubs.cml  IO_Stubs.sml  IO_Stubs_Old.sml  IO_Stubs_backup.sml  IO_Stubs_extra.sml  IO_Stubs_extra_orig.sml  Interface_Strings_Admits.sml  JSON_Admits.sml  ManGenConfig.sml  Manifest_Admits.sml  Manifest_Admits_Stubs.sml  Manifest_JSON_Admits_Stubs.sml  Maps.sml  Maps_Helpers.sml  Params_Admits.sml  Params_Admits_hardcoded.cml  Params_Admits_hardcoded.sml  Preamble_Stuff.sml  RawEvJudgement_Admits.sml  Serializable_Class_Admits.sml  Server_AM_prints.sml  StringT.sml  (+11 more)
system/: basis_ffi.c  shared_ffi_fns.c  shared_ffi_fns.h  sys_funcs.c
system/crypto/: Aes256.sml  CMakeLists.txt  CryptoFFI.sml  MeasFFI.sml  crypto_ffi.c  debug.h  meas.c  meas.h
system/crypto/evercrypt/: CMakeLists.txt  CryptoFFI.sml  HaclConfig.cmake  crypto_ffi.c  hacl.cmake  key_gen.c
system/crypto/openssl/: CryptoFFI.sml  crypto_ffi.c
system/crypto/tpm/: CMakeLists.txt  CryptoFFI.sml  Random.sml  crypto_ffi.c
tests/: CI_Test.sh  ClientDemo.sh  Demo.sh  HeadlessDemo.sh  Main.sml  Makefile  README.md  VmTest.sml  evidence_to_evidence_pair_list.sh  manifest_demo.sh  manifest_demo_built_cache.sh  manifest_demo_built_cert.sh  manifest_demo_built_kim.sh  manifest_demo_built_layeredbg.sh  manifest_demo_built_parmut.sh  manifest_demo_cache.sh  manifest_demo_cache_new.sh  manifest_demo_cert.sh  manifest_demo_cert_full.sh  manifest_demo_cert_new.sh  manifest_demo_cm.sh  manifest_demo_example.sh  manifest_demo_exampleInlineAuth.sh  manifest_demo_kim.sh  manifest_demo_kim_enc.sh  manifest_demo_kim_new.sh  manifest_demo_layeredbg.sh  manifest_demo_layeredbg_new.sh  manifest_demo_parmut.sh  manifest_demo_parmut_new.sh  manifest_democache.sh  modularized_cmake_manifest_demo_kim.sh  send_term_req.sh  term_to_term_pair_list.sh  vmTest.sml
uav/: Cache.sml  Demo.sml
util/: AM_CLI.sml  BinaryParser.sml  ByteString.sml  CoqDefaults.sml  CvmJson_Handwritten.sml  Extra.sml  Http.sml  Ini.sml  IniUtil.sml  Json.sml  JsonConfigUtils.sml  Log.sml  ManifestUtils.sml  Misc.sml  Parser.sml
(+366 files in other folders)
